# orchestra-codex

./: README.md  orchestra-provenance.json
.github/workflows/: rust-ci-full-nextest-platform.yml  rust-ci-full.yml
codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/src/: lib.rs
codex-rs/app-server-protocol/src/protocol/: common.rs  (+3 more)
codex-rs/app-server-transport/src/: lib.rs
codex-rs/app-server/src/: app_server_tracing.rs  extensions.rs  lib.rs  main.rs  message_processor.rs  request_processors.rs  transport.rs
codex-rs/core-skills/src/: injection.rs  model.rs
codex-rs/core/src/: codex_thread.rs  lib.rs  orchestra.rs
codex-rs/ext/orchestra/: Cargo.toml
codex-rs/ext/orchestra-core/: Cargo.toml
codex-rs/ext/orchestra-core/fixtures/: automation-issue.workflow.ts  native-vertical-slice.workflow.ts
codex-rs/ext/orchestra-core/src/: automation.rs  automation_run.rs  compiler.rs  compiler_artifact.rs  context.rs  evaluator.rs  host.rs  inputs.rs  lib.rs  linear.rs  plan.rs  query.rs  runtime.rs  skills.rs  state.rs  validate.rs
codex-rs/ext/orchestra-core/tests/: evaluator_worker.rs
codex-rs/ext/orchestra/src/: lib.rs  tool.rs  world_state.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/rollout/src/: list.rs  metadata.rs  model_context.rs  persistence_metrics.rs  policy.rs  recorder.rs  search.rs
codex-rs/state/migrations/: 0041_orchestra_task_events.sql
codex-rs/state/src/: extract.rs  lib.rs  runtime.rs
codex-rs/thread-store/src/: thread_metadata_sync.rs
scripts/: verify-orchestra-provenance.py
(+49 files in other folders)
